# doctest-discover

./: README.md  doctest-discover-configurator.cabal
src/: Config.hs  Main.hs  Runner.hs
