name:                doctest-discover-configurator
version:             0.1.0.6
synopsis:            Easy way to run doctests via cabal (no aeson dependency, uses configurator instead)
description:         doctest-discover provides an easy way to run doctests via cabal
license:             PublicDomain
license-file:        LICENSE
homepage:            http://github.com/relrod/doctest-discover-noaeson
author:              Karun Ramakrishnan, Ricky Elrod
maintainer:          ricky@elrod.me
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  build-depends:       base >=4.6 && <4.8, doctest, directory, filepath, bytestring, configurator >= 0.3 && < 0.4
  HS-Source-Dirs:      src

executable doctest-discover
  default-language:    Haskell2010
  build-depends:       base >=4.6 && <4.8, doctest, directory, filepath, bytestring, configurator >= 0.3 && < 0.4
  main-is:             Main.hs 
  other-modules:       Runner, Config
  HS-Source-Dirs:      src

test-suite doctests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  main-is:             Doctest-Main.hs
  build-depends:       base >4 && <5, doctest-discover, doctest
  HS-Source-Dirs:      test
